UIP-2568: Fixed alignment of Mobile method end user icon in End User Devices

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -571,7 +571,6 @@ button.tile-button {
     }
     &__icon-container {
         height: $icon-size;
-        width: $icon-size;
         margin-bottom: $spacing-lg;
         display: flex;
         align-items: center;
